<resources>
    <string name="app_name">会籍通</string>
    <string name="login_1">忘记密码？请联系客服</string>
    <string name="login_2">400–060–1233 </string>
    <string name="login_3">登 录</string>
    <string name="login_4">请填写用户名</string>
    <string name="login_5">请填写密码</string>
    <string name="title_1">订单信息</string>
    <string name="title_2">场次查询</string>
    <string name="title_3">定制促销</string>
    <string name="title_4">数据统计</string>
    <string name="title_5">设置</string>
    <string name="title_6">会籍信息</string>
    <string name="title_7">修改密码</string>
    <string name="main_0">取消</string>
    <string name="main_1">扫一扫</string>
    <string name="main_2">场次查询</string>
    <string name="main_3">定制促销</string>
    <string name="main_4">数据统计</string>
    <string name="main_5">设&#8195;&#8195;置</string>
    <string name="order_1">订单号</string>
    <string name="order_2">日期</string>
    <string name="order_3">人数</string>
    <string name="code_result_1">核销信息</string>
    <string name="code_result_2">会员姓名：</string>
    <string name="code_result_3">会&#8194;籍&#8194;ID：</string>
    <string name="code_result_4">会&#8194;籍&#8194;卡：</string>
    <string name="code_result_5">未查询到订场信息</string>
    <string name="code_result_6">确认核销</string>
    <string name="code_result_7">取 消</string>
    <string name="code_result_8">确认核销</string>
    <string name="code_result_9">预定场次</string>
    <string name="code_result_13">订单号</string>
    <string name="code_result_14">打球人数：</string>
    <string name="code_result_15">洞数：</string>
    <string name="code_result_16">打球时间：</string>
    <string name="code_result_17">请选择一个场次</string>
    <string name="scan_error_1">电子会籍认证失效\n请重新认证</string>
    <string name="scan_error_2">无效二维码</string>
    <string name="scan_error_3">返回首页</string>
    <string name="verify_1">订单号 </string>
    <string name="verify_2">打球时间：</string>
    <string name="verify_3">取 消</string>
    <string name="verify_4">继续扫码</string>
    <string name="verify_5">返回首页</string>
    <string name="verify_6">核销成功</string>
    <string name="verify_7">核销失败</string>
    <string name="verify_8">导致核销失败的原因：</string>
    <string name="verify_9">1、该场次已被核销\n2、会籍失效\n3、系统故障 </string>
    <string name="verify_10">核销信息</string>
    <string name="data_1">本周</string>
    <string name="data_2">本月</string>
    <string name="data_3">今年</string>
    <string name="data_4">累计消费场次</string>
    <string name="data_5">核销成功记录</string>
    <string name="data_6">会籍卡</string>
    <string name="data_7">消费人数</string>
    <string name="data_8">消费场次</string>
    <string name="data_9">日期</string>
    <string name="setting_1">修改密码</string>
    <string name="setting_2">联系客服</string>
    <string name="setting_3">400–060–1233</string>
    <string name="setting_4">退出登录</string>
    <string name="pass_word_1">原&#8194;密&#8194;码</string>
    <string name="pass_word_2">新&#8194;密&#8194;码</string>
    <string name="pass_word_3">再次输入</string>
    <string name="pass_word_4">请填写旧密码</string>
    <string name="pass_word_5">请填写新密码</string>
    <string name="pass_word_6">请填写新密码</string>
    <string name="pass_word_7">两次密码输入不一致</string>
    <string name="pass_word_8">修改成功！</string>
    <string name="pass_word_9">取 消</string>
    <string name="pass_word_10">提 交</string>
    <string name="publish_1">日期</string>
    <string name="publish_2">年</string>
    <string name="publish_3">月</string>
    <string name="publish_4">日</string>
    <string name="publish_5">查 询</string>
    <string name="publish_6">在售</string>
    <string name="publish_7">停售</string>
    <string name="publish_8">未发售</string>
    <string name="publish_9">售罄</string>
    <string name="publish_10">场次信息</string>
    <string name="publish_11">场次时间</string>
    <string name="publish_12">发布状态</string>
    <string name="publish_13">剩余场次人数</string>
    <string name="publish_14">确 定</string>
    <string name="publish_15">在 售</string>
    <string name="publish_16">停 售</string>
    <string name="publish_17">未发售</string>
    <string name="publish_18">售 罄</string>

</resources>
