<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
   android:gravity="center_vertical"
    android:layout_height="50dp">
    <TextView
        android:text="@string/order_1"
        android:textSize="18sp"
        android:paddingLeft="80dp"
        android:gravity="center_vertical"
        android:textColor="@color/color_main_bg"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:text="@string/order_2"
        android:textSize="18sp"
        android:paddingLeft="80dp"
        android:textColor="@color/color_main_bg"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:gravity="center_vertical"
        android:layout_height="match_parent"/>
    <TextView
        android:text="@string/order_3"
        android:textSize="18sp"
        android:gravity="right|center_vertical"
        android:textColor="@color/color_main_bg"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_marginEnd="40dp"
        android:layout_height="match_parent"/>
</LinearLayout>