<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/ll_1"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="14dp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="32dp"
    android:gravity="center_vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/publish_1"
        android:textSize="16sp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_year"
        android:layout_marginStart="56dp"
        android:gravity="center"
        android:background="@drawable/shape_date"
        android:layout_width="80dp"
        android:layout_height="20dp"/>
    <TextView
        android:text="@string/publish_2"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_month"
        android:gravity="center"
        android:layout_marginStart="12dp"
        android:background="@drawable/shape_date"
        android:layout_width="70dp"
        android:layout_height="20dp"/>
    <TextView
        android:text="@string/publish_3"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_day"
        android:gravity="center"
        android:layout_marginStart="12dp"
        android:background="@drawable/shape_date"
        android:layout_width="70dp"
        android:layout_height="20dp"/>
    <TextView
        android:text="@string/publish_4"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_search"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:layout_marginStart="40dp"
        android:background="@drawable/shape_btn_verify_bg"
        android:text="@string/publish_5"
        android:layout_width="110dp"
        android:layout_height="40dp"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/ll_2"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/ll_1"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@drawable/shape_publish_1"
            android:layout_width="50dp"
            android:layout_height="16dp"/>
        <TextView
            android:text="@string/publish_6"
            android:textSize="10sp"
            android:textColor="@color/color_text_6"
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:background="@drawable/shape_publish_2"
            android:layout_marginStart="25dp"
            android:layout_width="50dp"
            android:layout_height="16dp"/>
        <TextView
            android:text="@string/publish_8"
            android:textSize="10sp"
            android:textColor="@color/color_text_6"
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/ll_2"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ll_1"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@drawable/shape_publish_3"
            android:layout_width="50dp"
            android:layout_height="16dp"/>
        <TextView
            android:text="@string/publish_7"
            android:textSize="10sp"
            android:textColor="@color/color_text_6"
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:background="@drawable/shape_publish_4"
            android:layout_marginStart="25dp"
            android:layout_width="50dp"
            android:layout_height="16dp"/>
        <TextView
            android:text="@string/publish_9"
            android:textSize="10sp"
            android:textColor="@color/color_text_6"
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:id="@+id/line"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/ll_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="1dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_publish"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="43dp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>