<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_member"
        app:layout_constraintDimensionRatio="1:1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <ImageView
        android:id="@+id/iv_member_bg"
        android:background="@drawable/shape_member_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_member"
        app:layout_constraintEnd_toEndOf="@+id/iv_member"
        app:layout_constraintBottom_toBottomOf="@+id/iv_member"
        android:layout_width="0dp"
        android:layout_height="130dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/code_result_2"
        android:textColor="@color/color_white"
        app:layout_constraintStart_toStartOf="@+id/iv_member"
        app:layout_constraintBottom_toTopOf="@+id/tv_id"/>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/code_result_3"
        android:textColor="@color/color_white"
        app:layout_constraintStart_toStartOf="@+id/iv_member"
        app:layout_constraintBottom_toTopOf="@+id/tv_card"
        />

    <TextView
        android:id="@+id/tv_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/code_result_4"
        android:textColor="@color/color_white"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@+id/iv_member"
        app:layout_constraintBottom_toBottomOf="@+id/iv_member"
        />
    <TextView
        android:id="@+id/tv_1"
        android:text="@string/code_result_9"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_member"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="26dp"
        android:layout_marginStart="58dp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintStart_toEndOf="@+id/iv_member"
        app:layout_constraintTop_toBottomOf="@+id/tv_1"
        android:layout_marginStart="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/iv_member"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <Button
        android:id="@+id/btn_cancel"
        android:background="@drawable/shape_btn_cancel_bg"
        android:text="@string/code_result_7"
        android:textColor="@color/color_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="22dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <Button
        android:id="@+id/btn_confirm"
        android:background="@drawable/shape_btn_bg"
        android:text="@string/code_result_8"
        android:textSize="15sp"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="46dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_list"
        android:visibility="gone"
        app:constraint_referenced_ids="rv_order,btn_cancel,btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_none"
        android:drawableTop="@drawable/none"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toTopOf="@+id/iv_member"
        app:layout_constraintBottom_toBottomOf="@+id/iv_member"
        app:layout_constraintStart_toEndOf="@+id/iv_member"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/code_result_5"
        android:textColor="@color/color_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_back"
        android:background="@drawable/shape_btn_back_bg"
        android:text="@string/code_result_7"
        android:textSize="15sp"
        android:textColor="@color/color_text_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="46dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_none"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_none,btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>