<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_dialog_publish"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="280dp"
    android:layout_height="200dp">
<ImageView
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:src="@drawable/dialog_publish_bg"
    android:layout_width="100dp"
    android:layout_height="100dp"/>
    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_10"
        android:textColor="@color/color_text_3"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/tv_2"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/publish_11"
        android:textColor="@color/color_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_date"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_3"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_2"
        android:layout_marginTop="12dp"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/publish_12"
        android:textColor="@color/color_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_states"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_4"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_3"
        android:layout_marginTop="12dp"
        android:layout_marginStart="56dp"
      app:layout_constraintEnd_toEndOf="@+id/tv_3"
        android:text="@string/publish_13"
        android:textColor="@color/color_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_people"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_states"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/color_text_3"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_dissmiss"
        android:text="@string/publish_14"
        android:textColor="@color/color_text_4"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/shape_btn_back_bg"
        android:layout_width="68dp"
        android:layout_height="28dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>