<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fl_bg"
        app:layout_constraintDimensionRatio="1:1.3"
        android:background="@drawable/shape_verify_success_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <ImageView
        android:id="@+id/iv_verify"
        android:src="@drawable/verify_success"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="@+id/fl_bg"
        app:layout_constraintEnd_toEndOf="@+id/fl_bg"
        app:layout_constraintTop_toTopOf="@+id/fl_bg"
        android:layout_marginTop="55dp"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    <TextView
        android:id="@+id/tv_verify"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:text="@string/verify_6"
        app:layout_constraintStart_toStartOf="@+id/fl_bg"
        app:layout_constraintEnd_toEndOf="@+id/fl_bg"
        app:layout_constraintTop_toBottomOf="@+id/iv_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
    android:id="@+id/tv_1"
    android:text="@string/verify_10"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@+id/fl_bg"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="26dp"
    android:layout_marginStart="58dp"
    android:textColor="@color/color_text_3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_order_id"
        app:layout_constraintStart_toEndOf="@+id/fl_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="76dp"
        android:textColor="@color/color_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/fl_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_id"
        android:layout_marginTop="16dp"
        android:layout_marginStart="76dp"
        android:textColor="@color/color_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_cancel"
        android:background="@drawable/shape_btn_back_bg"
        android:text="@string/verify_3"
        android:textColor="@color/color_text_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_contiune"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="22dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <Button
        android:id="@+id/btn_contiune"
        android:background="@drawable/shape_btn_verify_bg"
        android:text="@string/verify_4"
        android:textSize="15sp"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="46dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_success"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_1,tv_order_id,tv_time,btn_cancel,btn_contiune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_2"
        android:textSize="15sp"
        android:textColor="@color/color_text_3"
        android:text="@string/verify_8"
        app:layout_constraintStart_toEndOf="@+id/fl_bg"
        android:layout_marginStart="90dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="72dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_3"
        android:textSize="15sp"
        android:textColor="@color/color_text_6"
        android:text="@string/verify_9"
        android:lineSpacingExtra="13dp"
        app:layout_constraintStart_toEndOf="@+id/fl_bg"
        android:layout_marginStart="90dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_2"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_home"
        android:background="@drawable/shape_btn_back_bg"
        android:text="@string/verify_5"
        android:textColor="@color/color_text_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_contiune_fail"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="22dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <Button
        android:id="@+id/btn_contiune_fail"
        android:background="@drawable/shape_btn_verify_fail_bg"
        android:text="@string/verify_4"
        android:textSize="15sp"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="46dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_fail"
        android:visibility="gone"
        app:constraint_referenced_ids="btn_home,btn_contiune_fail,tv_2,tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>