<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_bg"
        app:layout_constraintDimensionRatio="1:1.3"
        android:src="@drawable/setting_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/tv_1"
        android:text="@string/pass_word_1"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@+id/et_old"
        app:layout_constraintBottom_toBottomOf="@+id/et_old"
        app:layout_constraintStart_toEndOf="@+id/iv_bg"
        android:layout_marginStart="64dp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_old"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/shape_white_corner_2"
        android:layout_width="0dp"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/tv_2"
        android:text="@string/pass_word_2"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@+id/et_new"
        app:layout_constraintBottom_toBottomOf="@+id/et_new"
        app:layout_constraintStart_toEndOf="@+id/iv_bg"
        android:layout_marginStart="64dp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_new"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_old"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_white_corner_2"
        android:layout_width="0dp"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/tv_3"
        android:text="@string/pass_word_3"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@+id/et_again"
        app:layout_constraintBottom_toBottomOf="@+id/et_again"
        app:layout_constraintStart_toEndOf="@+id/iv_bg"
        android:layout_marginStart="64dp"
        android:textColor="@color/color_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_again"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_white_corner_2"
        android:layout_width="0dp"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:background="@drawable/shape_btn_back_bg"
        android:text="@string/pass_word_9"
        android:textColor="@color/color_text_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_commit"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="22dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
    <Button
        android:id="@+id/btn_commit"
        android:background="@drawable/shape_btn_verify_bg"
        android:text="@string/pass_word_10"
        android:textSize="15sp"
        android:textColor="@color/color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="46dp"
        android:layout_width="120dp"
        android:layout_height="44dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>